2009-02-16  Badlop  <badlop@process-one.net>

	* src/mod_roster.erl: When account is deleted, cancel presence
	subscription for all roster items (EJAB-790)
	* src/mod_roster_odbc.erl: Likewise

2009-02-14  Badlop  <badlop@process-one.net>

	* src/web/ejabberd_http_poll.erl: Allow configuration of session
	timeout, using new global option http_poll_timeout (EJAB-135)
	* doc/guide.tex: Document new option
	* doc/guide.html: Likewise

	* src/ejabberd_listener.erl: Report error at startup if a listener
	module isn't available or is not an ejabberd listener (EJAB-868)

2009-02-13  Badlop  <badlop@process-one.net>

	* src/mod_shared_roster.erl: Fix bug: a pending subscription
	request, and later the requester added to the roster due to a
	shared roster group, that request could neither be accepted or
	rejected (thanks to Brian Cully)(EJAB-869)

	* src/web/ejabberd_web_admin.erl: Show big integers with comma
	separators for easy reading

	* src/ejabberd_system_monitor.erl: Allow parametrizable watchdog
	threshold: option watchdog_large_heap or chatting with the
	watchdog bot (EJAB-545)
	* src/ejabberd_config.erl: Likewise
	* doc/guide.tex: Likewise
	* doc/guide.html: Likewise

2009-02-13  Christophe Romain <christophe.romain@process-one.net>

	* src/ejabberd_auth.erl: prevent from calling
	get_vh_registered_users/2 when not available

2009-02-05  Badlop  <badlop@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: The table pubsub_node in ejabberd
	older than 2.0.2 had indexes for parentid and type. This is not
	required since ejabberd 2.0.2, so those indexes can be
	deleted. (EJAB-669)

2009-02-03  Badlop  <badlop@process-one.net>

	* doc/Makefile: When cleaning, remove contributed_modules.tex.
	In Clean do not remove html. In new Distclean, remove also html.

	* src/Makefile.in: Fix arguments to Install program

2009-02-02  Badlop  <badlop@process-one.net>

	* src/web/ejabberd_web_admin.erl: Calls to the hook